--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "android-release": "react-native run-android --variant=release",
+    "android-bundle-release": "cd android && ./gradlew bundleRelease",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
@@ -11,6 +13,7 @@
   },
   "dependencies": {
     "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.6.2",
@@ -21,6 +24,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-date-picker": "^4.2.13",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-pager-view": "^6.2.0",
     "react-native-reanimated": "^3.1.0",
@@ -29,6 +33,7 @@
     "react-native-screens-swiper": "^1.2.6",
     "react-native-scrollable-tab-view-forked": "^1.1.4",
     "react-native-svg": "^13.9.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.1"
   },
