--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,3 +42,8 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+MYAPP_UPLOAD_STORE_FILE=logout.keystore
+MYAPP_UPLOAD_KEY_ALIAS=logout
+MYAPP_UPLOAD_STORE_PASSWORD=Tahsin2000@
+MYAPP_UPLOAD_KEY_PASSWORD=Tahsin2000@
