--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "accordion-collapse-react-native": "^1.1.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.7",
