--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.71.7",
     "react-native-date-picker": "^4.2.13",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-pager-view": "^6.2.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.1.0",
