--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
-    },
+  },
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-community/checkbox": "^0.5.15",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-picker/picker": "^2.4.10",
