--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/checkbox": "^0.5.15",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-picker/picker": "^2.4.10",
@@ -22,13 +23,16 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "@tanstack/react-query": "^4.29.7",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "accordion-collapse-react-native": "^1.1.1",
+    "axios": "^1.4.0",
+    "formik": "^2.2.9",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-date-picker": "^4.2.13",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "^2.10.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-pager-view": "^6.2.0",
     "react-native-ratings": "^8.1.0",
@@ -40,13 +44,16 @@
     "react-native-svg": "^13.9.0",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-swiper": "^1.6.0",
-    "react-native-tab-view": "^3.5.1"
+    "react-native-tab-view": "^3.5.1",
+    "react-native-toast-message": "^2.1.6",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@tanstack/eslint-plugin-query": "^4.29.9",
     "@tsconfig/react-native": "^2.0.3",
     "@types/jest": "^29.5.1",
     "@types/react": "^18.0.38",
